docs/7.52/md/abenddic_tools.md
---
title: "Tools for Classic ABAP Dictionary"
description: |
  Classic objects in ABAP Dictionary(https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenddic_classical_objects.htm) can be edited using the ABAP Dictionary tool in ABAP Workbench or using the ABAP Development Tools (ADT)(https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenad
version: "7.52"
category: "oop"
type: "abap-reference"
sourceUrl: "https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenddic_tools.htm"
abapFile: "abenddic_tools.htm"
keywords: ["do", "try", "class", "data", "abenddic", "tools"]
---

* * *

SAP NetWeaver AS ABAP Release 752, ©Copyright 2017 SAP AG. All rights reserved.

[ABAP - Keyword Documentation](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenabap.htm) →  [ABAP - Dictionary](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenabap_dictionary.htm) →  [Classic Objects in ABAP Dictionary](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenddic_classical_objects.htm) → 

Tools for Classic ABAP Dictionary

[Classic objects in ABAP Dictionary](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenddic_classical_objects.htm) can be edited using the ABAP Dictionary tool in ABAP Workbench or using the [ABAP Development Tools (ADT)](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenadt_glosry.htm "Glossary Entry"). The ABAP Dictionary tool in ABAP Workbench covers all classic objects and their attributes. The ADT tools, on the other hand, currently only cover some of these objects.

-   [The ABAP Dictionary Tool in ABAP Workbench](#abenddic-tools-1--------tools-in-adt---@ITOC@@ABENDDIC_TOOLS_2)

-   [Form-Based Tools](#abenddic-tools-3--------source-code-based-tools---@ITOC@@ABENDDIC_TOOLS_4)

The ABAP Dictionary Tool in ABAP Workbench

The ABAP Dictionary tool is integrated into the SAP GUI-based [ABAP Workbench](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenabap_workbench_glosry.htm "Glossary Entry") and can be called as a standalone tool using the transaction SE11. In all other ABAP Workbench tools, the associated tool for a dictionary object can be called using forward navigation.

The ABAP Dictionary tool in ABAP Workbench includes all functions required to create and edit any classic ABAP Dictionary object. Dictionary objects are edited as form-based objects, which means that their attributes are entered on SAP GUI screens and stored as metadata in the associated system tables when saved.

More information about the ABAP Dictionary tool in ABAP Workbench can be found in the ABAP Dictionary documentation in SAP Help Portal.

Note

In the documentation here, the names of the attributes of classic ABAP Dictionary objects follow the names in the ABAP Dictionary tool in ABAP Workbench.

Tools in ADT

The following [ABAP Development Tools (ADT)](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenadt_glosry.htm "Glossary Entry") cover some of the functions of the ABAP Dictionary tool in ABAP Workbench.

Form-Based Tools

For the following classic ABAP Dictionary objects, the [ABAP Development Tools (ADT)](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenadt_glosry.htm "Glossary Entry") offer form-based tools that work in a similar way to the ABAP Dictionary tools in ABAP Workbench:

-   [Data elements](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenddic_data_elements.htm)

-   [Domains](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenddic_domains.htm)

A description of these tools can be found under Working with Classic Objects in ABAP Dictionary.

Source-code-based tools

The [ABAP Development Tools (ADT)](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenadt_glosry.htm "Glossary Entry") offer source-code-based editors for the following class ABAP Dictionary objects:

-   [Structures](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenddic_structures.htm)

-   [Database tables](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenddic_database_tables.htm)

Here, the classic objects are edited in a syntax based on the [CDS DDL](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abencds_ddl_glosry.htm "Glossary Entry") in [ABAP CDS](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenabap_cds_glosry.htm "Glossary Entry"). Unlike in ABAP CDS, however, the source code of the classic ABAP Dictionary objects is not saved and transported. Instead, the source code of a classic object is generated from the metadata of the associated system tables. Conversely, the metadata itself is derived from source code directly and saved to the system tables. Like in ABAP CDS, the source code contains SQL parts that define the data structure and annotations (introduced using @) that defined attributes.

A description of the syntax can be found under Syntax of ABAP Dictionary Objects.

Example

The following source code shows a definition of the database table SCARR in ADT. The annotations defined the technical and semantic attributes of the table. The structure itself is defined after the statement define table, with further annotations describing the attributes of database fields.

@EndUserText.label : 'Airline'
@AbapCatalog.enhancementCategory : #EXTENSIBLE\_CHARACTER\_NUMERIC
@AbapCatalog.tableCategory : #TRANSPARENT
@AbapCatalog.deliveryClass : #A
@AbapCatalog.dataMaintenance : #ALLOWED
define table scarr {
  @AbapCatalog.foreignKey.keyType : #KEY
  @AbapCatalog.foreignKey.screenCheck : true
  key mandt  : s\_mandt not null
    with foreign key \[0..\*,1\] t000
      where mandt = scarr.mandt;
  key carrid : s\_carr\_id not null;
  carrname   : s\_carrname not null;
  @AbapCatalog.foreignKey.keyType : #NON\_KEY
  @AbapCatalog.foreignKey.screenCheck : true
  currcode   : s\_currcode not null
    with foreign key \[0..\*,1\] scurx
      where currkey = scarr.currcode;
  url        : s\_carrurl not null;